--- a/Adventure Game/Properties/Resources.resx
+++ b/Adventure Game/Properties/Resources.resx
@@ -130,13 +130,22 @@
   <data name="Forest" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Forest.webp;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Key_Room" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Key Room.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Old_Armory" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Old Armory.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Old_Ruins" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Old Ruins.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Spider_Area" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Spider Area.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Treasure_Chest" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Treasure Chest.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="YouAreDead" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\YouAreDead.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
